--- a/cliente/recursos/css/style.css
+++ b/cliente/recursos/css/style.css
@@ -1772,8 +1772,7 @@ body.dark,
 
 .single-service {
     position: relative;
-    -webkit-box-shadow: 0 2px 10px 0px rgba(0, 0, 0, 0.12);
-    box-shadow: 0 2px 10px 0px rgba(0, 0, 0, 0.12);
+    border: 1px solid #ececec;
     border-radius: 5px;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
