--- a/cliente/recursos/css/style.css
+++ b/cliente/recursos/css/style.css
@@ -1436,6 +1436,79 @@ body.dark,
     position: relative;
 }
 
+.swiper-wrapper {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr); /* Dos filas */
+    grid-auto-flow: column; /* Las columnas deben avanzar */
+    gap: 10px;
+}
+
+/* Contenedor de los botones */
+.back, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+    width: 50px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.3s ease;
+    height: 75px;
+    width: 50px;
+    border-radius: 5px;
+}
+
+/* Posiciones */
+.back {
+    left: 20px; /* Ajuste fino a la izquierda */
+}
+.next {
+    right: 20px; /* Ajuste fino a la derecha */
+}
+
+/* Efecto Hover */
+.back:hover, .next:hover {
+    background: rgb(0, 0, 0);
+    transform: translateY(-50%) scale(1.1); /* Agrandado al pasar el cursor */
+}
+.nav {
+    position: relative;
+    z-index: 10;
+    background-color: white;
+    padding: 10px;
+}
+
+.swiper-container {
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+
+/* Íconos de navegación */
+.swiper-button-prev, .swiper-button-next {
+    color: #fff; /* Color blanco para los íconos */
+    font-size: 15px; /* Tamaño del icono */
+}
+
+/* Para hacerlos compatibles con Swiper */
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+.swiper-slide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .bg-hover::after {
     position: absolute;
     content: '';
