agrega filtro por marca en la carga de productos; mejora la navegación y ajusta estilos en el header y CSS

--- a/cliente/recursos/css/style.css
+++ b/cliente/recursos/css/style.css
@@ -1832,6 +1832,7 @@ body.dark,
     overflow: hidden;
     width: 100%; /* Reduce width */
     background: white;
+    margin-bottom: 10px;
 }
 
 .single-service:hover {
