--- a/cliente/recursos/css/style.css
+++ b/cliente/recursos/css/style.css
@@ -142,6 +142,35 @@ ol li,
 ul li {
     list-style: none;
 }
+/*buscador*/
+.suggestions-box {
+    position: absolute;
+    top: 100%;
+    right: -25px;
+    width: 300px;
+    background-color: white;
+    border: 1px solid #ddd;
+    z-index: 1000;
+    display: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+}
+
+.buscador{
+    right: 30px; top: 50%; transform: translateY(-50%); border: none; background: transparent !important;
+    padding: 0 !important;
+}
+
+.suggestions-box .suggestion-item {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.suggestions-box .suggestion-item:hover {
+    background-color: #f0f0f0;
+}
+/*buscador*/
 
 img {
     height: auto;
