--- a/cliente/recursos/css/style.css
+++ b/cliente/recursos/css/style.css
@@ -65,7 +65,7 @@ section,
 
 h1,h2,h3,h4,h5,h6 {
     font-weight: 600;
-    color: #222;
+    color: #363030;
     margin-bottom: 0;
 }
 
@@ -158,7 +158,11 @@ ul li {
 }
 
 .buscador{
-    right: 30px; top: 50%; transform: translateY(-50%); border: none; background: transparent !important;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    background: transparent !important;
     padding: 0 !important;
 }
 
@@ -170,7 +174,75 @@ ul li {
 .suggestions-box .suggestion-item:hover {
     background-color: #f0f0f0;
 }
+
 /*buscador*/
+
+/* carrusel portada */
+/* Estilo del enlace */
+.product-link {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Tarjeta del producto */
+.product-card {
+    position: relative;
+    text-align: center;
+    background: #fff;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out;
+}
+
+.product-card:hover {
+    transform: scale(1.03);
+}
+
+/* Contenedor de imagen */
+.image-container {
+    width: 100%;
+    height: clamp(200px, 30vw, 320px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background: #f8f8f8;
+}
+
+/* Imagen del producto (mantiene proporciones) */
+.product-image {
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+}
+
+/* Información del producto */
+.product-info {
+    padding: 15px;
+    background: white;
+    border-top: 1px solid #ddd;
+}
+
+.product-info h5 {
+    font-size: 14px;
+    font-weight: 300;
+    opacity: 0.8;
+    margin: 0;
+}
+
+.product-info h4 {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 5px 0;
+}
+
+.price {
+    font-size: 16px;
+    color: #565656;
+    font-weight: bold;
+}
+/* carrusel portada */
 
 img {
     height: auto;
@@ -1518,7 +1590,6 @@ body.dark,
     position: relative;
     z-index: 1;
 }
-
 
 .bg-hover::after {
     position: absolute;
