cambia el color de fondo a blanco y añade un borde inferior en la lista de elementos

--- a/cliente/recursos/css/style.css
+++ b/cliente/recursos/css/style.css
@@ -250,8 +250,9 @@ ul li {
     overflow: hidden;
     -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
     mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     padding: 1rem 10px;
+    border-bottom: 1px solid #ddd;
 }
 
 .scroller__inner {
