--- a/cliente/recursos/css/responsive.css
+++ b/cliente/recursos/css/responsive.css
@@ -150,6 +150,10 @@
         padding: 5px 10px;
         font-size: 0 !important;
         border: none;
+
+    }
+    .carrito{
+        display: block !important;
     }
 
     header .navbar-expand .navbar-nav.action .btn {
@@ -161,7 +165,9 @@
         font-size: initial;
         margin: 0;
     }
-
+    .login{
+        display: none;
+    }
     .navbar-brand {
         margin: 0;
     }
@@ -188,18 +194,20 @@
     header .navbar-expand .navbar-nav.icons .social {
         display: none;
     }
+
     .modal-body {
         -webkit-box-align: start;
         -ms-flex-align: start;
         align-items: start;
     }
-
     .search-title {
         font-size: 40px;
     }
     .logo-header{
-        width: 50px;
-        
+        width: 150px !important;
+    }
+    .carrito a{
+        display: block !important;
     }
 }
 
